--- a/lab-sam/package.json
+++ b/lab-sam/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.15.1",
     "chai": "^3.5.0",
     "debug": "^2.2.0",
+    "del": "^2.2.0",
     "express": "^4.13.4",
     "mocha": "^2.5.3",
     "node-uuid": "^1.4.7",
