--- a/lab-sam/package.json
+++ b/lab-sam/package.json
@@ -27,6 +27,7 @@
     "del": "^2.2.0",
     "express": "^4.13.4",
     "mocha": "^2.5.3",
+    "morgan": "^1.7.0",
     "node-uuid": "^1.4.7",
     "nodemon": "^1.9.2",
     "superagent": "^2.0.0-alpha.3"
